refactor(backend): simplify Location cache-key and normalization